--- a/Ejercicio Fonts/Ejercicio Fonts.html
+++ b/Ejercicio Fonts/Ejercicio Fonts.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
 <head>
   	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
    	<title>Paddle Surf</title>
-	<link rel="stylesheet" href="css/fonts.css" type="text/css" charset="utf-8" />
-	<link href="css/Styles.css" type="text/css" rel="stylesheet">
+
+<!-- Google font  -->   	
+<link rel="stylesheet" type="text/css"href="https://fonts.googleapis.com/css?family=Roboto">
+
+<!-- Iconos  -->   	
+<link rel="stylesheet" href="fonticon/style.css" type="text/css" charset="utf-8"/>
+
+<!-- Importadas  --> 
+<link rel="stylesheet" href="Fonts/lobster/stylesheet.css" type="text/css" charset="utf-8"/>
+<link rel="stylesheet" href="Fonts/montserrat/stylesheet.css" type="text/css" charset="utf-8"/>
+
+
+
+
+<!-- Estilos  -->   	
+<link href="css/Styles.css" type="text/css" rel="stylesheet">
+	
 </head>
 
 <body>
@@ -33,6 +47,10 @@
 	    	
 	    <p>Descubre un deporte que cada vez tiene más adeptos. Aprende a mantener el equilibrio y disfruta del mar y del paisaje de la costa a tu ritmo, sintiendo como la tabla se desliza por el agua. Una actividad relajante y divertida, ideal para aquellos que quieran hacer ejercicio en un entorno natural y marino, disfrutando de la agradable sensación de deslizarse sobre las pequeñas olas de la costa catalana.</p>
 	</div>
+	
+	<span class="icon-facebook-with-circle"></span>
+	<span class="icon-pinterest-with-circle"></span>
+	<span class="icon-twitter-with-circle"></span>
 
 	<footer> 
 	     <p> © Copyrights Paddle Surf 2017</p>
